faction slider factional

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -2139,6 +2139,7 @@ ul, ol {
 .db-page--about-us .db-section--about-us-banner-after-life-faction {
   position: relative;
   background-color: #0E051A;
+  padding-bottom: 0;
 }
 .db-page--about-us .db-section--about-us-banner-after-life-faction::before {
   content: "";
@@ -2612,11 +2613,26 @@ ul, ol {
   }
 }
 .db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction {
-  margin-top: 750px;
-  padding-bottom: 123px;
+  margin-top: 500px;
+  padding-top: 200px;
   position: relative;
   z-index: 3;
-  height: 1170px;
+  height: 1300px;
+}
+.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 707px;
+  height: 966px;
+  background-image: url("About-Us__asset-faction-bg-v01-1414x1932.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  top: 0;
+  z-index: 1;
+  left: 50%;
+  transform: translateX(-53%);
 }
 @media only screen and (max-width: 1080px) {
   .db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction {
@@ -2624,7 +2640,7 @@ ul, ol {
   }
 }
 .db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container {
-  max-width: 1278px;
+  max-width: 1336px;
 }
 .db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(1) {
   column-gap: 150px;
@@ -2653,19 +2669,19 @@ ul, ol {
   color: #FFF;
   text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
   font-family: var(--primaryFontFamily);
-  font-size: 18px;
+  font-size: 20px;
   font-style: normal;
   font-weight: 500;
   line-height: 150%;
-  max-width: 522px;
+  max-width: 580px;
 }
 .db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) {
-  margin-top: 90px;
-  column-gap: 131px;
+  margin-top: 71px;
+  column-gap: 226px;
 }
 .db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(1) {
   max-width: 568px;
-  padding-top: 112px;
+  padding-top: 53px;
 }
 .db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(1) .db-inner-row:nth-child(1) {
   flex-direction: column;
@@ -2701,12 +2717,27 @@ ul, ol {
   line-height: 150%;
 }
 .db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(1) .db-inner-row:nth-child(3) {
-  margin-top: 93px;
+  margin-top: 60px;
 }
 .db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(1) .db-inner-row:nth-child(3) .db-inner-col:nth-child(1) {
   display: flex;
   column-gap: 70px;
   justify-content: flex-start;
+}
+.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(1) .db-inner-row:nth-child(3) .db-inner-col:nth-child(1) svg {
+  cursor: pointer;
+}
+.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(1) .db-inner-row:nth-child(3) .db-inner-col:nth-child(1) .svg-icon-prev, .db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(1) .db-inner-row:nth-child(3) .db-inner-col:nth-child(1) .svg-icon-next {
+  transition: all var(--hoverTransitionDuration) ease-in;
+  cursor: pointer;
+}
+.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(1) .db-inner-row:nth-child(3) .db-inner-col:nth-child(1) .svg-icon-prev:hover > path, .db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(1) .db-inner-row:nth-child(3) .db-inner-col:nth-child(1) .svg-icon-next:hover > path {
+  fill: #AA27B1;
+}
+.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) {
+  max-width: 522px;
+  min-width: 522px;
+  width: 100%;
 }
 .db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list {
   position: relative;
@@ -2721,12 +2752,10 @@ ul, ol {
   transition: all 0.3s ease-in-out;
 }
 .db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card .card-wrapper {
-  padding: 47px 53px 99px 53px;
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
-  row-gap: 46px;
 }
 .db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card .card-wrapper::before {
   content: "";
@@ -2741,26 +2770,30 @@ ul, ol {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height: 439px;
+  height: 403px;
   z-index: -2;
 }
 .db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card .card-wrapper .faction-img-container {
-  max-width: 319px;
+  max-width: 293px;
   width: 100%;
-  min-width: 319px;
-  height: 435px;
+  min-width: 293px;
+  height: 400px;
 }
 .db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card .card-wrapper .faction-img-container img {
   display: block;
   width: 100%;
   object-fit: cover;
 }
-.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card:nth-child(1) {
+.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card.first-faction {
   border: 3.327px solid #D86FFF;
   box-shadow: 20px 20px 30px 0px rgba(0, 0, 0, 0.5), 4.52212px 4.52212px 9.04423px 0px rgba(181, 34, 235, 0.3), -4.52212px -4.52212px 9.04423px 0px rgba(181, 34, 235, 0.3), 2.26106px 2.26106px 4.52212px 0px rgba(216, 110, 255, 0.6), -2.26106px -2.26106px 4.52212px 0px rgba(216, 110, 255, 0.6);
   background: #1A1120;
 }
-.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card:nth-child(1) .card-wrapper::after {
+.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card.first-faction .card-wrapper {
+  padding: 44px 49px 92px 50px;
+  row-gap: 42px;
+}
+.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card.first-faction .card-wrapper::after {
   content: "";
   position: absolute;
   display: block;
@@ -2768,18 +2801,18 @@ ul, ol {
   right: 0;
   bottom: 0;
   background: linear-gradient(180deg, rgba(24, 15, 30, 0) 0%, #180F1E 39.63%);
-  height: 443px;
   z-index: -1;
 }
-.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card:nth-child(2) {
+.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card.second-faction {
   border: 1.899px solid #FF6F6F;
   box-shadow: 20px 20px 30px 0px rgba(0, 0, 0, 0.5);
   background: #201111;
 }
-.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card:nth-child(2) .card-wrapper {
-  padding: 43px 50px 55px 50px;
+.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card.second-faction .card-wrapper {
+  padding: 40px 45px 50px 45px;
+  row-gap: 27px;
 }
-.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card:nth-child(2) .card-wrapper::after {
+.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card.second-faction .card-wrapper::after {
   content: "";
   position: absolute;
   display: block;
@@ -2787,18 +2820,18 @@ ul, ol {
   right: 0;
   bottom: 0;
   background: linear-gradient(180deg, rgba(30, 15, 15, 0) 0%, #1E0F0F 39.63%);
-  height: 408px;
   z-index: -1;
 }
-.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card:nth-child(3) {
+.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card.third-faction {
   border: 0.906px solid #6FFF87;
   box-shadow: 20px 20px 30px 0px rgba(0, 0, 0, 0.5);
   background: #112013;
 }
-.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card:nth-child(3) .card-wrapper {
-  padding: 38px 43px 43px 43px;
+.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card.third-faction .card-wrapper {
+  padding: 36px 40px 39px 41px;
+  row-gap: 28px;
 }
-.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card:nth-child(3) .card-wrapper::after {
+.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card.third-faction .card-wrapper::after {
   content: "";
   position: absolute;
   display: block;
@@ -2806,7 +2839,6 @@ ul, ol {
   right: 0;
   bottom: 0;
   background: linear-gradient(180deg, rgba(15, 30, 18, 0) 0%, #0F1E12 39.63%);
-  height: 362px;
   z-index: -1;
 }
 .db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card.--next {
@@ -2822,18 +2854,45 @@ ul, ol {
   left: 0;
   scale: 1;
   z-index: 3;
+  opacity: 1;
+  display: block;
+}
+.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card.--first .card-wrapper::after {
+  height: 407px;
 }
 .db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card.--second {
-  top: calc(100% - (50% + 240px));
-  left: calc(100% - (50% + 225px));
-  scale: 0.9;
+  top: 70px;
+  left: calc(100% - (50% + 190px));
+  scale: 0.93;
   z-index: 2;
+  opacity: 1;
+  display: block;
+}
+.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card.--second .card-wrapper {
+  padding: 40px 45px 50px 45px;
+  row-gap: 27px;
+}
+.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card.--second .card-wrapper::after {
+  height: 400px;
 }
 .db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card.--third {
-  top: calc(100% - (50% + 160px));
-  right: calc(100% - (50% + 260px));
-  scale: 0.8;
+  top: 145px;
+  right: calc(100% - (50% + 249px));
+  scale: 0.85;
   z-index: 1;
+  opacity: 1;
+  display: block;
+}
+.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card.--third .card-wrapper {
+  padding: 36px 40px 39px 41px;
+  row-gap: 28px;
+}
+.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card.--third .card-wrapper::after {
+  height: 400px;
+}
+.db-page--about-us .db-section--about-us-banner-after-life-faction .about-us--faction .db-container .db-row:nth-child(2) .db-col:nth-child(2) .card-list .card.--hidden {
+  opacity: 0;
+  transform: translate(30%, 30%);
 }
 @keyframes upSlide {
   0% {
@@ -2857,6 +2916,7 @@ ul, ol {
     transform: translate(-50%, -50%);
     scale: 1.05;
     opacity: 0;
+    z-index: 3;
   }
   50% {
     transform: translate(-30%, -30%);
